# raytracing-rust

./: .gitignore  Cargo.toml
_tests/: geometry.rs
assets/skull/: scene.gltf
examples/: import_gltf_example.rs  mouse_picking_example.rs
src/: bevy_utils.rs  bin.rs  color.rs  core.rs  example.rs  lib.rs  main.rs  utils.rs
src/bevy_utils/: bevy_utils.rs  components.rs  mesh.rs  raytracing.rs  resources.rs  spawns.rs
src/core/: mod.rs  rtengine.rs
src/scene/: camera.rs  light.rs  material.rs
src/utils/: color.rs  geometry.rs
tests/: geometry.rs  rtengine.rs  scene.rs
