[package]
name = "rust_bevy_rt"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = {version = "0.6.1"}
rand = "0.8.5"
# bevy_obj = "0.6.0"
# bevy_rapier3d = { version = "0.12.1", features = [ "simd-stable", "render"] }

[lib]
name = "raytracing"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"