[package]
name = "rust-raytracing"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = {version = "0.7.0"}
rand = "0.8.5"
ndarray = "0.15.4"
bevy_mod_raycast = "0.4.0"
glam = "0.20.2"
image = "0.24.1"
# bevy_obj = "0.6.0"
# bevy_rapier3d = { version = "0.12.1", features = [ "simd-stable", "render"] }

[lib]
name = "raytracing"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"
